Fixed spacing in navbuttons

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ grid-area:  1 / 1 / 1 / 11;
 z-index: 1;
 display: flex;
 justify-content: center;
-align-items: center;
+
 
 }
 
